--- a/myfirst/templates/base.html
+++ b/myfirst/templates/base.html
@@ -31,9 +31,8 @@
         {% block content %}{% endblock %}</div>
 </main><!--Zápatí stránky -->
 <footer class="container-fluid text-center">
-    <hr><!--Vykreslí logo školy ze statického souboru skola-logo.png --><p><img src="{% static 'img/skola-logo.png' %}"
-                                                                                alt="Logo školy"></p>
-    <p>&copy; 2021 -SŠPU Opava</p></footer><!--Připojení externích JS knihoven --><!--jQuery library -->
+    <hr>
+    <p>&copy; 2022 Patrik Mlčák</p></footer><!--Připojení externích JS knihoven --><!--jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!--Popper JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
