stránka se seznamem

--- a/myfirst/templates/base.html
+++ b/myfirst/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="cs">
-<head><!--Blok s titulkem stránky --><title>{% block title %}Filmotéka{% endblock %}</title>
+<head><!--Blok s titulkem stránky --><title>{% block title %}Tankopédie{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"><!--Připojení externích CSS -->
     <!--Latest compiled and minified CSS -->
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body><!--Záhlavístránky -->
-<header class="jumbotron-fluid p-5 text-center bg-dark"><h1 class="text-white text-uppercase display-3">Malá filmová
-    databáze</h1></header><!--Navigační lišta -->
+<header class="jumbotron-fluid p-5 text-center bg-dark"><h1 class="text-white text-uppercase display-3">Tankopédie</h1></header><!--Navigační lišta -->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark"><!--Brand --><a class="navbar-brand text-warning"
-                                                                         href="#">MFD</a>
+                                                                         href="#">ST</a>
     <!--Přepínací tlačítko pro mobilní zobrazení -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"><span
             class="navbar-toggler-icon"></span></button><!--Hlavní menu -->
