--- a/myfirst/templates/index.html
+++ b/myfirst/templates/index.html
@@ -16,6 +16,8 @@
                         {% for types in tank.types %}{{ types }}{% endfor %}</p>
                     <p class="card-text"><strong>Národnost</strong>
                         {% for nations in tank.nations %}{{ nations }}{% endfor %}</p>
+                    <p class="card-text"><strong>Tier/úroveň</strong>
+                        {% for tier in tank.tier %}{{ tier }}{% endfor %}</p>
                     <a href="#" class="btn btn-primary">Podrobnosti</a></div>
             </div>
         </div>{% endfor %}</div>
