--- a/myfirst/templates/base.html
+++ b/myfirst/templates/base.html
@@ -20,8 +20,7 @@
         <ul class="navbar-nav">
             <li class="nav-item"><!--Odkaz na úvodní stránku webu --><a class="nav-link active"
                                                                         href="{% url 'index' %}">Úvodní stránka</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Filmy</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Žánry</a></li>
+            <li class="nav-item"><a class="nav-link" href="list.html">Seznam tanků</a></li>
         </ul>
     </div>
 </nav><!--Hlavní blok stránky -->
