--- a/myfirst/templates/list.html
+++ b/myfirst/templates/list.html
@@ -15,10 +15,10 @@
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
                 <div class="card">
                     {% for images in tank.attachment_set.all %}
-                    <div class="col-lg-6 col-xl-4">
-                     <img class="card-img-top" src="{{ images.image.url }}" alt="{{ tank.name }}">
-                    </div>
-                {% endfor %}
+                        <div class="col-lg-6 col-xl-4">
+                            <img class="card-img-top" src="{{ images.image.url }}" alt="{{ tank.name }}">
+                        </div>
+                    {% endfor %}
                     <div class="card-body"><h4 class="card-title">{{ tank.name }}</h4>
                         <p class="card-text"><strong>Typ Tanku</strong>
                             {% for types in tank.types %}{{ types }}{% endfor %}</p>
@@ -26,10 +26,11 @@
                             {% for nations in tank.nations %}{{ nations }}{% endfor %}</p>
                         <p class="card-text"><strong>Tier/úroveň</strong>
                             {% for tier in tank.tier %}{{ tier }}{% endfor %}</p>
-                        <a href="#" class="btn btn-primary">Podrobnosti</a></div>
+                        <a href="#" class="btn btn-primary">Podrobnosti</a>
                     </div>
                 </div>
             </div>
+
         {% endfor %}
     </div>
 {% endblock %}
