--- a/myfirst/templates/list.html
+++ b/myfirst/templates/list.html
@@ -26,7 +26,7 @@
                             {% for nations in tank.nations %}{{ nations }}{% endfor %}</p>
                         <p class="card-text"><strong>Tier/úroveň</strong>
                             {% for tier in tank.tier %}{{ tier }}{% endfor %}</p>
-                        <a href="#" class="btn btn-primary">Podrobnosti</a>
+                        <a href="{% url 'tank_detail' tank.pk %}" class="btn btn-primary">Podrobnosti</a>
                     </div>
                 </div>
             </div>
