--- a/myfirst/templates/base.html
+++ b/myfirst/templates/base.html
@@ -16,7 +16,7 @@
 <body><!--Záhlavístránky -->
 <header class="jumbotron-fluid p-5 text-center bg-dark"><h1 class="text-white text-uppercase display-3">Tankopédie</h1></header><!--Navigační lišta -->
 <nav class="navbar navbar-expand-md bg-dark navbar-dark"><!--Brand --><a class="navbar-brand text-warning"
-                                                                         href="#">ST</a>
+                                                                         href="{% url 'index' %}">ST</a>
     <!--Přepínací tlačítko pro mobilní zobrazení -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"><span
             class="navbar-toggler-icon"></span></button><!--Hlavní menu -->
